--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,6 @@ on:
   pull_request:
     branches:
       - master
-  schedule:
-    # weekly: at 04:13 on Monday
-    - cron: '13 4 * * 1'
 
 jobs:
   build:
@@ -22,19 +19,16 @@ jobs:
         run: |
           echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
-          docker build --tag ghcr.io/tgagor/jpegtran:alpine --cache-from ghcr.io/tgagor/jpegtran:alpine alpine
-          docker build --tag ghcr.io/tgagor/jpegtran:debian --cache-from ghcr.io/tgagor/jpegtran:debian debian
+          docker build --tag ghcr.io/tgagor/owasp-dependency-check --cache-from ghcr.io/tgagor/owasp-dependency-check .
 
-          docker run -i --rm ghcr.io/tgagor/jpegtran:alpine -version
-          docker run -i --rm ghcr.io/tgagor/jpegtran:debian -version
+          docker run -i --rm ghcr.io/tgagor/owasp-dependency-check -version
 
-          docker tag ghcr.io/tgagor/jpegtran:alpine ghcr.io/tgagor/jpegtran:${GITHUB_REF##*/}
-          docker tag ghcr.io/tgagor/jpegtran:alpine ghcr.io/tgagor/jpegtran:alpine-${{ github.sha }}
+          docker tag ghcr.io/tgagor/owasp-dependency-check ghcr.io/tgagor/owasp-dependency-check:${GITHUB_REF##*/}
+          docker tag ghcr.io/tgagor/owasp-dependency-check ghcr.io/tgagor/owasp-dependency-check:${{ github.sha }}
 
-          docker push ghcr.io/tgagor/jpegtran:alpine
-          docker push ghcr.io/tgagor/jpegtran:alpine-${{ github.sha }}
-          docker push ghcr.io/tgagor/jpegtran:debian
-          docker push ghcr.io/tgagor/jpegtran:${GITHUB_REF##*/}
+          docker push ghcr.io/tgagor/owasp-dependency-check
+          docker push ghcr.io/tgagor/owasp-dependency-check:${{ github.sha }}
+          docker push ghcr.io/tgagor/owasp-dependency-check:${GITHUB_REF##*/}
 
   security-scan:
     runs-on: ubuntu-20.04
@@ -45,18 +39,18 @@ jobs:
       - name: Fetch image
         run: |
           echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
-          docker pull ghcr.io/tgagor/jpegtran:alpine-${{ github.sha }}
+          docker pull ghcr.io/tgagor/owasp-dependency-check:${{ github.sha }}
 
-      - name: Run Trivy vulnerability scanner on Alpine image
+      - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/tgagor/jpegtran:alpine-${{ github.sha }}
+          image-ref: ghcr.io/tgagor/owasp-dependency-check:${{ github.sha }}
           format: template
           template: '@/contrib/sarif.tpl'
           exit-code: 0
           output: trivy-results.sarif
 
-      - name: Upload Trivy Alpine variant scan results to GitHub Security tab
+      - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: trivy-results.sarif
@@ -75,8 +69,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create normal GitHub release
-        if: github.ref == 'refs/heads/master' && github.event_name != 'schedule'
+      - name: Create GitHub release
+        if: github.ref == 'refs/heads/master'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -84,18 +78,3 @@ jobs:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           release_name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
-
-      - name: Get current date
-        if: github.event_name == 'schedule'
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-      - name: Create a weekly GitHub release
-        if: github.event_name == 'schedule'
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: |
-            Weekly rebuild on ${{ steps.date.outputs.date }}
